--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bz31</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
+    <script type="module">
+        import { BezirkElement, ZAbOrdnung, registerAll } from './h31.js';
+        registerAll();
+    </script>
 </body>
 </html>
