--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <script type="module">
-        import { BezirkElement, ZAbOrdnung, registerAll } from './h31.js';
+        import { BezirkElement, ZAbOrdnung, registerAll } from './bezirk.js';
         registerAll();
     </script>
 </body>
