--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <be-zirk></be-zirk>
 
+    
     <script type="module">
-        import { BezirkElement, ZAbOrdnung, registerAll } from './bezirk.js';
+        import { Bezirk, ZAbOrdnung, registerAll } from './bezirk.js';
         registerAll();
     </script>
 </body>
